<resources>
    <string name="app_name">超级收藏夹</string>
    <string name="version">1.0</string>
    <string name="cant_get_ver">不能获取版本号</string>
    <string name="welcome">欢迎使用超级收藏夹!</string>
    <string name="name_tip">请输入用户名</string>
    <string name="pass_tip">请输入密码</string>
    <string name="remember_pwd">记住密码</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="reg_acc_tip">注册账号</string>
    <string name="login_btn">登&#160;&#160;&#160;&#160;&#160;&#160;录</string>
    <string name="go">跳过此步骤</string>
    <string name="localfavor">发&#160;&#160;&#160;&#160;现</string>
    <string name="mynet">朋友圈</string>
    <string name="myfavor">我&#160;&#160;&#160;&#160;的</string>
    <string name="type">收&#160;藏&#160;夹</string>
    <string name="text">文&#160;&#160;&#160;&#160;本</string>
    <string name="picture">图&#160;&#160;&#160;&#160;片</string>
    <string name="music">音&#160;&#160;&#160;&#160;乐</string>
    <string name="video">视&#160;&#160;&#160;&#160;频</string>
    <string name="share">分享</string>
    <string name="favor">收藏</string>
    <string name="del">删除</string>
    <string name="set">设置</string>
    <string name="run_in_back">后台运行</string>
    <string name="feedback">我要反馈</string>
    <string name="help">帮助</string>
    <string name="about">关于</string>
    <string name="fb">反馈</string>
    <string name="fb_content_top">希望&#160;&#160;超级收藏夹改进某些地方?</string>
    <string name="fb_content_center">&#160;或者&#160;&#160;您可以通过邮箱联系我们!</string>
    <string name="fb_content_bottom">&#x000A;&#160;&#160;1653267893@qq.com</string>
    <string name="suggest">建议、意见或者问题</string>
    <string name="send">发送</string>
    <string name="title_activity_settings">设置</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="savedshare">保存分享</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="input_title">请输入标题</string>
    <string name="input_content">请输入内容</string>
    <string name="show_time">2016/12/01 21:13:35</string>
    <string name="update">检查更新</string>
    <string name="input_keywords">请输入关键词</string>
    <string name="add">添&#160;&#160;&#160;&#160;加</string>
    <string name="search">输入关键词搜索</string>
    <string name="friends">朋友圈</string>
    <string name="search_page">搜索</string>
    <string name="save_to_fris">分享到朋友圈</string>
    <string name="notice">注意！本选项会公开你分享的文章</string>

</resources>