<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/type">
    <menu android:checkableBehavior="single">
        <item
            android:id="@+id/favor"
            android:icon="@mipmap/heart_e"
            android:title="@string/myfavor" />
        <item
            android:id="@+id/local"
            android:icon="@mipmap/favorite"
            android:title="@string/localfavor" />
    </menu>
    </item>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/help"
                android:icon="@mipmap/help"
                android:title="@string/help" />
            <!--<item
                android:id="@+id/left_setting"
                android:icon="@mipmap/settings"
                android:title="@string/title_activity_settings" />-->
            <item
                android:id="@+id/about"
                android:icon="@mipmap/about"
                android:title="@string/about" />
            <item
                android:id="@+id/back"
                android:title="@string/run_in_back"
                />
        </menu>
    </item>

</menu>
