<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/top"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/title_bar_color">
        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@color/trancent"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/savedshare"
            android:textSize="24sp"
            android:textColor="@color/white"
            />
        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/save"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@color/trancent"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:paddingTop="20dp"
        >
        <EditText
            android:id="@+id/share_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_title"
            />

        <EditText
            android:id="@+id/share_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:lines="10"
            android:textSize="14sp"
            android:hint="@string/input_content"
            android:gravity="left|top"
            />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        >
        <CheckBox
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:id="@+id/share_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_to_fris"
            android:checked="false"
            />
        <TextView
            android:layout_below="@id/share_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notice"
            android:layout_marginLeft="40dp"
            />
    </RelativeLayout>
</LinearLayout>
