<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mypage"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/layout_shape"
    android:orientation="vertical">

    <TextView
        android:id="@+id/mytitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
        android:singleLine="true"
        android:text="@string/input_title"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/mycontent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp"
            android:background="@color/content_back"
            android:ellipsize="end"
            android:maxLines="4"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="15dp"
            android:singleLine="false"
            android:text="@string/input_content"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/the_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="40dp"
            android:background="@color/white"
            android:paddingRight="40dp"
            android:text="@string/show_time"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </RelativeLayout>
</LinearLayout>
