<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/top">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/title_bar_color"
        >
        <ImageButton
            android:id="@+id/page_back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@mipmap/left_arrow"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:id="@+id/content_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_title"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:singleLine="true"
            android:textStyle="bold"
            android:ellipsize="end"
            android:layout_toRightOf="@id/page_back"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="40dp"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginLeft="20dp"
        />
    <TextView
        android:id="@+id/content_time"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_vertical|right"
        android:layout_weight="0.5"
        android:text="@string/show_time"
        android:textStyle="italic"
        android:paddingRight="40dp"
        />
    <TextView
        android:id="@+id/myessay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7.5"
        android:text="@string/input_content"
        android:textSize="18sp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:scrollbars="vertical"
        android:textScaleX="1"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:textIsSelectable="true"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="center_vertical"
        >
        <ImageButton
            android:id="@+id/content_share"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_menu_share"
            android:background="@color/white"
            />
    </RelativeLayout>

</LinearLayout>
