<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/layout_shape"
    android:layout_margin="5dp"
    android:id="@+id/mypage"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/mytitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_title"
            android:singleLine="true"
            android:textSize="20sp"
            android:paddingLeft="15dp"
            android:paddingRight="20dp"
            android:paddingTop="5dp"
            android:textColor="@color/black"
            android:background="@color/white"
            />
        <CheckBox
            android:id="@+id/mymenu"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:checked="false"
            android:background="@mipmap/right"
            android:button="@null"
            />
        <TextView
            android:id="@+id/the_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingRight="40dp"
            android:text="@string/show_time"
            android:textSize="14sp"
            android:layout_marginTop="40dp"
            android:textColor="@color/black"
            android:background="@color/white"
            />
    </RelativeLayout>
    <TextView
        android:id="@+id/mycontent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/input_content"
        android:textSize="16sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="15dp"
        android:paddingBottom="5dp"
        android:textColor="@color/black"
        android:singleLine="false"
        android:maxLines="4"
        android:ellipsize="end"
        android:background="@color/content_back"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        >
        <!--<ImageButton
            android:id="@+id/likeBtn"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@color/white"
            android:src="@mipmap/heart_e"
            android:layout_alignParentRight="true"
            android:layout_marginRight="108dp"
            />-->
        <ImageButton
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:id="@+id/shareBtn"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_menu_share"
            android:background="@color/white"
            />
        <!--<ImageButton
            android:id="@+id/my_del"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:src="@mipmap/delete"
            android:background="@color/white"
            />-->
    </RelativeLayout>
   <!-- <View
        android:id="@+id/divider"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/gray"
        />-->

</LinearLayout>
